# AI-Proving-Grounds

./: .gitignore  README.md  main.py  pyproject.toml
1-BuildingSystemsWithChatGPTAPI/: A-Setup&CompletionsAPI.ipynb  A.ExploreCompletionsAPI.ipynb  B.EvaluateAndClassifyInputs.ipynb  C.InputModerationTechniques.ipynb  D.ChainOfThoughtReasoning.ipynb  E.PromptChaining.ipynb  F.EvaluatingOutputs.ipynb  G.CustomerServiceBot.ipynb  H.EvaluatingLLMPPerformance.ipynb  I.EvaluationUsingRubric.ipynb  README.md
2-RAGChatWithYourData/: 1-DocumentLoading.ipynb  2-DocumentSplitting.ipynb  3-VectorsAndEmbeddings.ipynb  4-RetrievalTechniques.ipynb  5-Q&A.ipynb  6-Memory&POC.ipynb  README.md
2-RAGChatWithYourData/docs/: README.md
2-RAGChatWithYourData/docs/chroma/: chroma.sqlite3
