[project]
name = "ai-proving-grounds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter-bokeh>=4.0.5",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pandas>=3.0.0",
    "panel>=1.8.6",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "utils>=1.0.2",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
]
